[cleanup] reduce memory impact of samples.