@@ -31,7 +31,7 @@ import org.spf4j.base.Pair;
 import org.spf4j.ds.Traversals;
 import org.spf4j.ds.Graph;
 import org.spf4j.ds.HashMapGraph;
-import org.spf4j.stackmonitor.Method;
+import org.spf4j.stackmonitor.InvokedMethod;
 import org.spf4j.stackmonitor.SampleNode;
 import static org.spf4j.ui.StackPanelBase.LINK_COLOR;
 
@@ -45,9 +45,9 @@ public final class ZStackPanel extends StackPanelBase {
 
   private static final long serialVersionUID = 1L;
 
-  private Graph<Method, SampleNode.InvocationCount> graph;
-  private Graph<Method, SampleNode.InvocationCount> completeGraph;
-  private Map<Method, Rectangle2D> methodLocations;
+  private Graph<InvokedMethod, SampleNode.InvocationCount> graph;
+  private Graph<InvokedMethod, SampleNode.InvocationCount> completeGraph;
+  private Map<InvokedMethod, Rectangle2D> methodLocations;
   private double totalHeight = 0;
 
   public ZStackPanel(final SampleNode samples) {
@@ -66,28 +66,28 @@ public final class ZStackPanel extends StackPanelBase {
           final Graphics2D g2, final int x, final int y, final double areaWidth, final double rowHeight) {
 
     graph = completeGraph.copy();
-    int rootSamples = graph.getEdges(Method.ROOT).getIncomming().keySet().iterator().next().getValue();
+    int rootSamples = graph.getEdges(InvokedMethod.ROOT).getIncomming().keySet().iterator().next().getValue();
     final double pps = areaWidth / rootSamples;
-    methodLocations = new HashMap<Method, Rectangle2D>();
-    final Traversals.TraversalCallback<Method, SampleNode.InvocationCount> traversalCallback
-            = new Traversals.TraversalCallback<Method, SampleNode.InvocationCount>() {
+    methodLocations = new HashMap<InvokedMethod, Rectangle2D>();
+    final Traversals.TraversalCallback<InvokedMethod, SampleNode.InvocationCount> traversalCallback
+            = new Traversals.TraversalCallback<InvokedMethod, SampleNode.InvocationCount>() {
       private int counter = 0;
 
       @Override
-      public void handle(final Method vertex, final Map<SampleNode.InvocationCount, Method> edges) {
+      public void handle(final InvokedMethod vertex, final Map<SampleNode.InvocationCount, InvokedMethod> edges) {
         if (edges.size() == 1) {
-          if (vertex.equals(Method.ROOT)) {
+          if (vertex.equals(InvokedMethod.ROOT)) {
             int nrSamples = edges.keySet().iterator().next().getValue();
             drawMethod(vertex, nrSamples, (double) x, (double) y, (double) areaWidth,
                     (double) rowHeight);
           } else {
-            Map.Entry<SampleNode.InvocationCount, Method> fromEntry = edges.entrySet().iterator().next();
-            Method fromMethod = fromEntry.getValue();
+            Map.Entry<SampleNode.InvocationCount, InvokedMethod> fromEntry = edges.entrySet().iterator().next();
+            InvokedMethod fromMethod = fromEntry.getValue();
             Rectangle2D fromMethodLocation = methodLocations.get(fromMethod);
             int relativeSamples = 0;
-            for (Map.Entry<SampleNode.InvocationCount, Method> ens
+            for (Map.Entry<SampleNode.InvocationCount, InvokedMethod> ens
                     : graph.getEdges(fromMethod).getOutgoing().entrySet()) {
-              Method slm = ens.getValue();
+              InvokedMethod slm = ens.getValue();
               if (methodLocations.containsKey(slm) && graph.getEdges(slm).getIncomming().size() == 1
                       && !fromMethod.equals(slm)) {
                 relativeSamples += ens.getKey().getValue();
@@ -108,13 +108,12 @@ public final class ZStackPanel extends StackPanelBase {
       }
 
       @SuppressFBWarnings("ISB_TOSTRING_APPENDING")
-      private void drawMethod(final Method vertex, final int nrSamples,
+      private void drawMethod(final InvokedMethod vertex, final int nrSamples,
               final double x, final double y, final double width, final double height,
               final Point... fromLinks) {
         Rectangle2D.Double location = new Rectangle2D.Double(x, y, width, height);
         methodLocations.put(vertex, location);
-        tooltipDetail.insert(new float[]{(float) x, (float) y}, new float[]{(float) width, (float) height},
-                Pair.of(vertex, nrSamples));
+        insert(x, y, width, height, new Sampled<>(vertex, nrSamples));
         double newHeight = y + height;
         if (totalHeight < newHeight) {
           totalHeight = newHeight;
@@ -122,7 +121,7 @@ public final class ZStackPanel extends StackPanelBase {
         FlameStackPanel.setElementColor(counter++, g2);
         g2.setClip((int) x, (int) y, (int) width, (int) height);
         g2.fillRect((int) x, (int) y, (int) width, (int) height);
-        String val = vertex.toString() + '-' + nrSamples;
+        String val = vertex.getMethod().toString() + '-' + nrSamples;
 
         g2.setPaint(Color.BLACK);
         g2.drawString(val, (int) x, (int) (y + height - 1));
@@ -135,14 +134,15 @@ public final class ZStackPanel extends StackPanelBase {
         g2.drawRect((int) x, (int) y, (int) width, (int) height);
       }
 
-      private void renderMethodLinked(final Map<SampleNode.InvocationCount, Method> edges, final Method vertex) {
+      private void renderMethodLinked(final Map<SampleNode.InvocationCount, InvokedMethod> edges,
+              final InvokedMethod vertex) {
         List<Point> fromPoints = new ArrayList<>(edges.size());
         double newYBase = 0;
         double newXBase = Double.MAX_VALUE;
         double newWidth = 0;
         double maxX = Double.MIN_VALUE;
         int nrSamples = 0;
-        for (Map.Entry<SampleNode.InvocationCount, Method> fromEntry : edges.entrySet()) {
+        for (Map.Entry<SampleNode.InvocationCount, InvokedMethod> fromEntry : edges.entrySet()) {
           Rectangle2D fromRect = methodLocations.get(fromEntry.getValue());
           newWidth += fromEntry.getKey().getValue() * pps;
           nrSamples += fromEntry.getKey().getValue();
@@ -164,7 +164,7 @@ public final class ZStackPanel extends StackPanelBase {
           fromPoints.add(new Point((int) fromRect.getCenterX(), (int) fromRect.getMaxY()));
         }
 
-        Pair<List<Pair<Method, Integer>>, Double> result = findEmptySpace(newXBase, newYBase, newWidth, maxX);
+        Pair<List<Sampled<InvokedMethod>>, Double> result = findEmptySpace(newXBase, newYBase, newWidth, maxX);
         while (!result.getFirst().isEmpty()) {
           // TODO: optimize this to increment with a better value
           newYBase += rowHeight;
@@ -175,21 +175,20 @@ public final class ZStackPanel extends StackPanelBase {
       }
 
       @SuppressFBWarnings("PRMC_POSSIBLY_REDUNDANT_METHOD_CALLS")
-      private Pair<List<Pair<Method, Integer>>, Double> findEmptySpace(
+      private Pair<List<Sampled<InvokedMethod>>, Double> findEmptySpace(
               final double newXBase, final double newYBase,
               final double newWidth, final double maxX) {
         double tryx = newXBase + (maxX - newXBase) / 2 - newWidth / 2;
         tryx = fitToViewableArea(tryx, newWidth);
-        final float[] oc = new float[]{(float) newWidth, Float.MAX_VALUE};
-        List<Pair<Method, Integer>> methods = tooltipDetail.search(new float[]{(float) tryx, (float) newYBase}, oc);
+        List<Sampled<InvokedMethod>> methods = search(tryx, newYBase, newWidth, Float.MAX_VALUE);
         if (!methods.isEmpty()) {
           tryx = newXBase;
           tryx = fitToViewableArea(tryx, newWidth);
-          methods = tooltipDetail.search(new float[]{(float) tryx, (float) newYBase}, oc);
+          methods = search(tryx, newYBase, newWidth, Float.MAX_VALUE);
           if (!methods.isEmpty()) {
             tryx = maxX - newWidth;
             tryx = fitToViewableArea(tryx, newWidth);
-            methods = tooltipDetail.search(new float[]{(float) tryx, (float) newYBase}, oc);
+            methods = search(tryx, newYBase, newWidth, Float.MAX_VALUE);
           }
         }
         return Pair.of(methods, tryx);
@@ -206,23 +205,23 @@ public final class ZStackPanel extends StackPanelBase {
       }
     };
 
-    Traversals.customTraverse(graph, Method.ROOT, traversalCallback);
+    Traversals.customTraverse(graph, InvokedMethod.ROOT, traversalCallback);
 
   }
 
   @Override
   public String getDetail(final Point location) {
-    List<Pair<Method, Integer>> tips = tooltipDetail.search(new float[]{location.x, location.y}, new float[]{0, 0});
+    List<Sampled<InvokedMethod>> tips = search(location.x, location.y, 0, 0);
     if (tips.size() >= 1) {
-      final Pair<Method, Integer> node = tips.get(0);
-      final Method method = node.getFirst();
-      final Map<SampleNode.InvocationCount, Method> incomming = graph.getEdges(method).getIncomming();
+      final Sampled<InvokedMethod> node = tips.get(0);
+      final InvokedMethod method = node.getObj();
+      final Map<SampleNode.InvocationCount, InvokedMethod> incomming = graph.getEdges(method).getIncomming();
       StringBuilder sb = new StringBuilder();
-      sb.append(method).append('-').append(node.getSecond())
+      sb.append(method).append('-').append(node.getNrSamples())
               .append("\n invoked from: ");
       appendEdgeInfo(incomming, sb);
       sb.append("\n invoking: ");
-      final Map<SampleNode.InvocationCount, Method> outgoing = graph.getEdges(method).getOutgoing();
+      final Map<SampleNode.InvocationCount, InvokedMethod> outgoing = graph.getEdges(method).getOutgoing();
       appendEdgeInfo(outgoing, sb);
       return sb.toString();
     } else {
@@ -232,10 +231,10 @@ public final class ZStackPanel extends StackPanelBase {
 
   @Override
   public void filter() {
-    List<Pair<Method, Integer>> tips = tooltipDetail.search(new float[]{xx, yy}, new float[]{0, 0});
+    List<Sampled<InvokedMethod>> tips = search(xx, yy, 0, 0);
     if (tips.size() >= 1) {
-      final Method value = tips.get(0).getFirst().withId(0);
-      samples = samples.filteredBy(new EqualsPredicate<Method>(value));
+      final InvokedMethod value = tips.get(0).getObj().withId(0);
+      samples = samples.filteredBy(new EqualsPredicate<InvokedMethod>(value));
       if (samples != null) {
         this.completeGraph = SampleNode.toGraph(samples);
       } else {
@@ -245,11 +244,11 @@ public final class ZStackPanel extends StackPanelBase {
     }
   }
 
-  private static void appendEdgeInfo(final Map<SampleNode.InvocationCount, Method> incomming,
+  private static void appendEdgeInfo(final Map<SampleNode.InvocationCount, InvokedMethod> incomming,
           final StringBuilder sb) {
-    for (Map.Entry<SampleNode.InvocationCount, Method> entry : incomming.entrySet()) {
+    for (Map.Entry<SampleNode.InvocationCount, InvokedMethod> entry : incomming.entrySet()) {
       int ic = entry.getKey().getValue();
-      Method method = entry.getValue();
+      InvokedMethod method = entry.getValue();
       sb.append(method).append('-').append(ic).append("; ");
     }
   }
